ui-tests/tests/ui/bad_parse_wrapper.stderr
error[E0308]: mismatched types
  --> tests/ui/bad_parse_wrapper.rs:13:17
   |
13 |     bool_expr = 2 + 2
   |                 ^^^^^ expected `bool`, found integer
